javascripts/pegjs/easyCodeParser.js
easyCodeParser = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = function(block) {return block},
        peg$c1 = [],
        peg$c2 = function(codeLines) {return createBlock(codeLines)},
        peg$c3 = peg$FAILED,
        peg$c4 = /^[\n]/,
        peg$c5 = { type: "class", value: "[\\n]", description: "[\\n]" },
        peg$c6 = function() {return undefined},
        peg$c7 = /^[\n \t]/,
        peg$c8 = { type: "class", value: "[\\n \\t]", description: "[\\n \\t]" },
        peg$c9 = function(code) {return code},
        peg$c10 = "vrai",
        peg$c11 = { type: "literal", value: "VRAI", description: "\"VRAI\"" },
        peg$c12 = "faux",
        peg$c13 = { type: "literal", value: "FAUX", description: "\"FAUX\"" },
        peg$c14 = "(",
        peg$c15 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c16 = ")",
        peg$c17 = { type: "literal", value: ")", description: "\")\"" },
        peg$c18 = function(booleanExpression) {booleanExpression.priority = true; return booleanExpression},
        peg$c19 = "!",
        peg$c20 = { type: "literal", value: "!", description: "\"!\"" },
        peg$c21 = function(expr) {return {type : 'reversBoolean', bool : expr}},
        peg$c22 = "==",
        peg$c23 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c24 = "<>",
        peg$c25 = { type: "literal", value: "<>", description: "\"<>\"" },
        peg$c26 = "!=",
        peg$c27 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c28 = function(left, oper, right) {return {type : 'comparaison', left : left, right : right, operation : oper}},
        peg$c29 = ">=",
        peg$c30 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c31 = "<=",
        peg$c32 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c33 = "<",
        peg$c34 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c35 = ">",
        peg$c36 = { type: "literal", value: ">", description: "\">\"" },
        peg$c37 = "et",
        peg$c38 = { type: "literal", value: "ET", description: "\"ET\"" },
        peg$c39 = function(left, oper, right) {return CreateArithmetiqueBoolean(oper, left, right)},
        peg$c40 = "ou",
        peg$c41 = { type: "literal", value: "OU", description: "\"OU\"" },
        peg$c42 = "+",
        peg$c43 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c44 = "-",
        peg$c45 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c46 = function(left, oper, right) {return CreateArithmetique(oper, left, right)},
        peg$c47 = "*",
        peg$c48 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c49 = "/",
        peg$c50 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c51 = "%",
        peg$c52 = { type: "literal", value: "%", description: "\"%\"" },
        peg$c53 = function(calc) {calc.priority = true; return calc},
        peg$c54 = "definir",
        peg$c55 = { type: "literal", value: "DEFINIR", description: "\"DEFINIR\"" },
        peg$c56 = function(varname, type) {return computeOffset({type : 'command', commandName : 'defined', varname : varname, vartype : type})},
        peg$c57 = "ECRIRE",
        peg$c58 = { type: "literal", value: "ECRIRE", description: "\"ECRIRE\"" },
        peg$c59 = function(expression) {return computeOffset({type : 'command', commandName : 'ECRIRE', params : [expression]})},
        peg$c60 = "LIRE",
        peg$c61 = { type: "literal", value: "LIRE", description: "\"LIRE\"" },
        peg$c62 = function(varname) {return computeOffset({type : 'command', commandName : 'LIRE', params : [varname]})},
        peg$c63 = "=",
        peg$c64 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c65 = function(varname, expression) {return createAffectation(varname, expression)},
        peg$c66 = "//",
        peg$c67 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c68 = /^[^\n]/,
        peg$c69 = { type: "class", value: "[^\\n]", description: "[^\\n]" },
        peg$c70 = "/*",
        peg$c71 = { type: "literal", value: "/*", description: "\"/*\"" },
        peg$c72 = /^[^*]/,
        peg$c73 = { type: "class", value: "[^*]", description: "[^*]" },
        peg$c74 = "*/",
        peg$c75 = { type: "literal", value: "*/", description: "\"*/\"" },
        peg$c76 = "SI",
        peg$c77 = { type: "literal", value: "SI", description: "\"SI\"" },
        peg$c78 = null,
        peg$c79 = "FIN_SI",
        peg$c80 = { type: "literal", value: "FIN_SI", description: "\"FIN_SI\"" },
        peg$c81 = function(expr, blockYes, blockElseIf, blockNo) { return createCondition(expr, blockYes, blockNo, blockElseIf)},
        peg$c82 = "SI_NON",
        peg$c83 = { type: "literal", value: "SI_NON", description: "\"SI_NON\"" },
        peg$c84 = "SI_NON SI",
        peg$c85 = { type: "literal", value: "SI_NON SI", description: "\"SI_NON SI\"" },
        peg$c86 = function(expr, block) {return createCondition(expr, block)},
        peg$c87 = "TANT_QUE",
        peg$c88 = { type: "literal", value: "TANT_QUE", description: "\"TANT_QUE\"" },
        peg$c89 = "FIN_TANT_QUE",
        peg$c90 = { type: "literal", value: "FIN_TANT_QUE", description: "\"FIN_TANT_QUE\"" },
        peg$c91 = function(expr, block) {return {type : 'while', test : expr, block : block}},
        peg$c92 = "POUR",
        peg$c93 = { type: "literal", value: "POUR", description: "\"POUR\"" },
        peg$c94 = "DE",
        peg$c95 = { type: "literal", value: "DE", description: "\"DE\"" },
        peg$c96 = "A",
        peg$c97 = { type: "literal", value: "A", description: "\"A\"" },
        peg$c98 = "FIN_POUR",
        peg$c99 = { type: "literal", value: "FIN_POUR", description: "\"FIN_POUR\"" },
        peg$c100 = function(varname, start, end, block) {return {type : 'for', varname : varname, start : start, enf : end, block : block}},
        peg$c101 = "DANS",
        peg$c102 = { type: "literal", value: "DANS", description: "\"DANS\"" },
        peg$c103 = function(varname, arrayName, block) {return {type : 'forArray', varname : varname, arrayName : arrayName, block : block}},
        peg$c104 = { type: "other", description: "nom de variable (caract\xE9re acc\xE9pt\xE9s a-z A-Z et _)" },
        peg$c105 = /^[a-zA-Z_]/,
        peg$c106 = { type: "class", value: "[a-zA-Z_]", description: "[a-zA-Z_]" },
        peg$c107 = "[",
        peg$c108 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c109 = "]",
        peg$c110 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c111 = function(varname, index) {return createVar(varname, index)},
        peg$c112 = function(varname, attribute) {return createVar(varname, undefined, {name : attribute.name})},
        peg$c113 = function(varname) {return createVar(varname)},
        peg$c114 = ".",
        peg$c115 = { type: "literal", value: ".", description: "\".\"" },
        peg$c116 = function(varname) {return varname},
        peg$c117 = function(varname, params, otherAccess) {return ChangeLastAttributeByMethod(varname, params, otherAccess)},
        peg$c118 = function(call) {return call},
        peg$c119 = ",",
        peg$c120 = { type: "literal", value: ",", description: "\",\"" },
        peg$c121 = function(parameter) {return parameter},
        peg$c122 = { type: "other", description: "nom de fonction" },
        peg$c123 = function(functionName) {return functionName.join('')},
        peg$c124 = "nombre",
        peg$c125 = { type: "literal", value: "NOMBRE", description: "\"NOMBRE\"" },
        peg$c126 = "chaine",
        peg$c127 = { type: "literal", value: "CHAINE", description: "\"CHAINE\"" },
        peg$c128 = "tableau",
        peg$c129 = { type: "literal", value: "TABLEAU", description: "\"TABLEAU\"" },
        peg$c130 = "booleen",
        peg$c131 = { type: "literal", value: "BOOLEEN", description: "\"BOOLEEN\"" },
        peg$c132 = function(type) {return type.toUpperCase()},
        peg$c133 = { type: "other", description: "chaine de caract\xE8re" },
        peg$c134 = "\"",
        peg$c135 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c136 = "\\\"",
        peg$c137 = { type: "literal", value: "\\\"", description: "\"\\\\\\\"\"" },
        peg$c138 = /^[^"]/,
        peg$c139 = { type: "class", value: "[^\"]", description: "[^\"]" },
        peg$c140 = function(string) {return string.join('')},
        peg$c141 = "'",
        peg$c142 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c143 = "\\'",
        peg$c144 = { type: "literal", value: "\\'", description: "\"\\\\'\"" },
        peg$c145 = /^[^']/,
        peg$c146 = { type: "class", value: "[^']", description: "[^']" },
        peg$c147 = { type: "other", description: "caract\xE8re exemple : 'a'" },
        peg$c148 = { type: "any", description: "any character" },
        peg$c149 = function(car) {return car},
        peg$c150 = { type: "other", description: "integer" },
        peg$c151 = /^[0-9]/,
        peg$c152 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c153 = function(digits) { return parseInt(digits.join(""), 10); },
        peg$c154 = { type: "other", description: "espace" },
        peg$c155 = /^[ \t]/,
        peg$c156 = { type: "class", value: "[ \\t]", description: "[ \\t]" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseblock();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseblock() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsecodeLine();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsecodeLine();
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c2(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsecodeLine() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parseeatSpace();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsedefine();
        if (s2 === peg$FAILED) {
          s2 = peg$parseifblock();
          if (s2 === peg$FAILED) {
            s2 = peg$parsewhileblock();
            if (s2 === peg$FAILED) {
              s2 = peg$parseforeachblock();
              if (s2 === peg$FAILED) {
                s2 = peg$parseoneLineComment();
                if (s2 === peg$FAILED) {
                  s2 = peg$parsemultilineComment();
                  if (s2 === peg$FAILED) {
                    s2 = peg$parseecrire();
                    if (s2 === peg$FAILED) {
                      s2 = peg$parselire();
                      if (s2 === peg$FAILED) {
                        s2 = peg$parseaffectation();
                        if (s2 === peg$FAILED) {
                          s2 = peg$currPos;
                          if (peg$c4.test(input.charAt(peg$currPos))) {
                            s3 = input.charAt(peg$currPos);
                            peg$currPos++;
                          } else {
                            s3 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c5); }
                          }
                          if (s3 !== peg$FAILED) {
                            peg$reportedPos = s2;
                            s3 = peg$c6();
                          }
                          s2 = s3;
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          if (peg$c7.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c8); }
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            if (peg$c7.test(input.charAt(peg$currPos))) {
              s4 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c8); }
            }
          }
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c9(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c3;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c3;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c3;
      }

      return s0;
    }

    function peg$parseexpression() {
      var s0;

      s0 = peg$parsenotPrioritaryBoolean();
      if (s0 === peg$FAILED) {
        s0 = peg$parsenotPrioritary();
      }

      return s0;
    }

    function peg$parsecomparaisonMembre() {
      var s0;

      if (input.substr(peg$currPos, 4).toLowerCase() === peg$c10) {
        s0 = input.substr(peg$currPos, 4);
        peg$currPos += 4;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 4).toLowerCase() === peg$c12) {
          s0 = input.substr(peg$currPos, 4);
          peg$currPos += 4;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c13); }
        }
        if (s0 === peg$FAILED) {
          s0 = peg$parsevarName();
          if (s0 === peg$FAILED) {
            s0 = peg$parsenotPrioritary();
          }
        }
      }

      return s0;
    }

    function peg$parsebooleanPrimary() {
      var s0, s1, s2, s3, s4, s5;

      if (input.substr(peg$currPos, 4).toLowerCase() === peg$c10) {
        s0 = input.substr(peg$currPos, 4);
        peg$currPos += 4;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 4).toLowerCase() === peg$c12) {
          s0 = input.substr(peg$currPos, 4);
          peg$currPos += 4;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c13); }
        }
        if (s0 === peg$FAILED) {
          s0 = peg$parsemethodCall();
          if (s0 === peg$FAILED) {
            s0 = peg$parsevarName();
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              if (input.charCodeAt(peg$currPos) === 40) {
                s1 = peg$c14;
                peg$currPos++;
              } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c15); }
              }
              if (s1 !== peg$FAILED) {
                s2 = peg$parseeatSpace();
                if (s2 !== peg$FAILED) {
                  s3 = peg$parsenotPrioritaryBoolean();
                  if (s3 !== peg$FAILED) {
                    s4 = peg$parseeatSpace();
                    if (s4 !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 41) {
                        s5 = peg$c16;
                        peg$currPos++;
                      } else {
                        s5 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c17); }
                      }
                      if (s5 !== peg$FAILED) {
                        peg$reportedPos = s0;
                        s1 = peg$c18(s3);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$c3;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c3;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c3;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c3;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c3;
              }
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                if (input.charCodeAt(peg$currPos) === 33) {
                  s1 = peg$c19;
                  peg$currPos++;
                } else {
                  s1 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c20); }
                }
                if (s1 !== peg$FAILED) {
                  s2 = peg$parseeatSpace();
                  if (s2 !== peg$FAILED) {
                    s3 = peg$parsecomparaison();
                    if (s3 !== peg$FAILED) {
                      peg$reportedPos = s0;
                      s1 = peg$c21(s3);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c3;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c3;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c3;
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parsecomparaison() {
      var s0, s1, s2, s3, s4, s5;
